--- a/electron/app/index.html
+++ b/electron/app/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel="shortcut icon" type=image/png href=static/favicon.ico>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" rel=stylesheet>
-    <link href=https://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css media=all rel=stylesheet type=text/css>
-    <title>AWS-Cognito-Vue</title>
-    <link href=static/css/app.d0b45d271fc2685c27518027d5e037ae.css rel=stylesheet>
-</head>
-
-<body>
-    <div id=app></div>
-    <script type=text/javascript src=static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
-    <script type=text/javascript src=static/js/vendor.8302805be0c638176673.js></script>
-    <script type=text/javascript src=static/js/app.17b882f790fc4a54524e.js></script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><link rel="shortcut icon" type=image/png href=/static/favicon.ico><link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" rel=stylesheet><link href=https://cdn.materialdesignicons.com/2.1.19/css/materialdesignicons.min.css media=all rel=stylesheet type=text/css><title>AWS-Cognito-Vue</title><link href=/static/css/app.a93987e395742e066bb918f69bffa384.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.773aa87d69f3b8c87080.js></script><script type=text/javascript src=/static/js/vendor.e95bb4c3b2578b47a73d.js></script><script type=text/javascript src=/static/js/app.a40bef63c9f7e58ece79.js></script></body></html>
