--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 <body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <script>
+    // Check that service workers are registered
+    if ('serviceWorker' in navigator) {
+      // Use the window load event to keep the page load performant
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/sw.js');
+      });
+    }
 
+  </script>
 </body>
 
 </html>
